--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "displayName": "Unity Multi-Scenes support",
   "description": "Unity Multi scenes support",
   "unity": "2019.3",
-  "version": "2022.0.4",
+  "version": "2024.0.0",
   "homepage": "https://github.com/UnioGame/MultiScenes#readme",
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
     "Scene"
   ],
   "dependencies": {
-    "com.unigame.coremodules": "2023.0.3",
+    "com.unigame.coremodules": "https://github.com/UnioGame/UniGame.CoreModules.git",
     "com.unity.addressables": "1.21.1"
   }
 }
