- update package version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.unigame.multiscenes",
-  "author": "UniGameTeam",
+  "author": "UniGame",
   "displayName": "Unity Multi-Scenes support",
   "description": "Unity Multi scenes support",
   "unity": "2019.3",
