--- a/Editor/unigame.multiscenes.editor.asmdef
+++ b/Editor/unigame.multiscenes.editor.asmdef
@@ -16,6 +16,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.codewriter.triinspector",
+            "expression": "",
+            "define": "TRI_INSPECTOR"
+        }
+    ],
     "noEngineReferences": false
 }
