--- a/Runtime/unigame.multiscenes.runtime.asmdef
+++ b/Runtime/unigame.multiscenes.runtime.asmdef
@@ -5,7 +5,13 @@
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:593a5b492d29ac6448b1ebf7f035ef33"
+        "GUID:593a5b492d29ac6448b1ebf7f035ef33",
+        "GUID:8e4577c9194c10845984cf27eb974fd1",
+        "GUID:2796129a6c23eb84a8181f62bf7332f1",
+        "GUID:69448af7b92c7f342b298e06a37122aa",
+        "GUID:324caed91501a9c47a04ebfd87b68794",
+        "GUID:e851236b9ac2b9b4eaaa99506366edea",
+        "GUID:90456d836f7b85c45a469d1f5ee611b1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -14,6 +20,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.codewriter.triinspector",
+            "expression": "",
+            "define": "TRI_INSPECTOR"
+        }
+    ],
     "noEngineReferences": false
 }
