--- a/Runtime/unigame.multiscenes.runtime.asmdef
+++ b/Runtime/unigame.multiscenes.runtime.asmdef
@@ -11,7 +11,8 @@
         "GUID:69448af7b92c7f342b298e06a37122aa",
         "GUID:324caed91501a9c47a04ebfd87b68794",
         "GUID:e851236b9ac2b9b4eaaa99506366edea",
-        "GUID:90456d836f7b85c45a469d1f5ee611b1"
+        "GUID:90456d836f7b85c45a469d1f5ee611b1",
+        "GUID:94b76ab488496fe4ba2e594d6c583770"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
